--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@portabletext/react": "^6.0.2",
     "@portabletext/types": "^4.0.1",
     "@sanity/image-url": "^2.0.2",
